- 
    Bug 
- 
    Resolution: Fixed
- 
    P2: Important 
- 
    6.3, 6.5.2
- 
        
- 
        8c7c60fff (dev), 584cd7239 (6.6)
Long text content of a Text loaded with Loader, which is not active immediately, inside a Flickable is not visible when scrolling down. This is a regression in Qt6, not reproducible with Qt5.15.14. If Text is instantiated without a Loader then the whole text content is visible. Also, if Loader active property is true immediately the text content is visible. Typical use case would be that the Loader is only loaded on demand, e.g. when a menu item or button is clicked.
Rectangle {
    id: root
    visible: false
    Flickable {
        id: flickable
        anchors {
            fill: root
            margins: 10
        }
        contentHeight: flickableContent.height
        Loader {
            id: flickableContent
            width: flickable.width
            active: root.visible
            source: "qrc:/LicenseContent.qml"
        }
    }
    Component.onCompleted: visible = true
}
Same issue seems to be reproducible also with Loader asynchronous property:
Rectangle {
    id: root
    Flickable {
        id: flickable
        anchors {
            fill: root
            margins: 10
        }
        contentHeight: flickableContent.height
        Loader {
            id: flickableContent
            width: flickable.width
            asynchronous: true
            source: "qrc:/LicenseContent.qml"
        }
    }
} 
- resulted from
- 
                    QTBUG-90734 Make large content flickable -         
- Open
 
-